Project

General

Profile

Bug #48136

rgw_file: fix Zipper integration in RGWLibContinuedReq

Added by Matt Benjamin over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

History

#1 Updated by Matt Benjamin over 3 years ago

  • Status changed from New to Fix Under Review

#2 Updated by Matt Benjamin over 3 years ago

  • Pull request ID set to 37967

#3 Updated by Matt Benjamin over 3 years ago

  • Status changed from Fix Under Review to Resolved
  • Severity changed from 3 - minor to 2 - major

These fixes aren't needed by any current Ceph release, so there's nothing to backport.

Also available in: Atom PDF