rgw_file: fix some zipper flow for RGWLibContinuedReq

Some bits of the standard Zipper conversions were missed for
the RGWLibContinuedReq case, where the setup is encapsulated in
the request, but execution is broken up in to steps.   This
currently affects only RGWWriteRequest.

Fixes: https://tracker.ceph.com/issues/48136

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>